src/App.css
a, a:visited, a:hover, a:link, a:active {text-decoration: none}
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

#root{
    margin: 3px;
}
.App{
    font-family: source-sans-pro, sans-serif;
    margin-right: 2px;
    /* width: 100vw; */
}
.transit-master{
    border: 1px solid black;
    border-radius: 10px;
    background-color: black;
    width: 100%;
}
.transit{
    background-color: white;
    font-family: sans-serif;
    display: flex;
    width: 100%;
    /* margin-left: 10px; */
}
@media  only screen and (max-width: 510px) {
.transit{
    overflow: auto;  
}
}
.transit-header{
    display: flex;
    text-decoration: none;

}
.transit-switcher{
    display: flex;
    /* margin-left: 15px; */
    width: 100%;
    /* margin-right: 15px; */
}
#marin{
    /* border-radius: 10px 0 0 0; */
    
}
#busemoji{
    border-right: 1px solid black;
    /* margin: 10px 10px 0px 5px; */
    /* padding-bottom: 10px; */
    /* height: 15px; */
    font-size: 33px;
    width: 40px; 
    padding-right: 3px;
    padding-left: 7px;
}
#busemoji span{
    position: relative;
    top: -10px;
}
div.five-eleven{
    background-color: white;
    border-radius: 10px;
    height: 36px;
    margin: 4px 5px 3px 4px;
    padding: 3px 2px 0px 2px;
}
img.five-eleven{
    height: 33px;
}
.transit-switch-on{
    margin: 10px 1px 0 1px;
    padding: 10px 7px 10px 5px;
    border-right: 1px solid black;
    border-top: 1px solid black;
    border-radius: 7px 7px 0 0;
    height: 15px;
    width: 75px;
    background-color: white;
    color: green;
    font-weight: 900;
    font-size: 12px;
    text-decoration: none;
    
}
.transit-switch-off{
    margin: 13px 0 0 1px;
    padding: 9px 7px 11px 5px;
    background-color: lightgray;
    border-radius: 7px 7px 0 0;
    border-top: 1px solid black;
    border-right: 1px solid black;
    color: black;
    height: 12px;
    font-size: 12px;
    width: 75px;
    /* font-weight: 900; */

    /* margin-left: 10px; */
}
.transit-switch-off:hover{
    cursor: pointer;
}
.transit-on{
    display: flex;
    width: 100%;
    /* border-top: 1px solid black; */
    border-radius: 0 0 10px 10px;
    padding: 0px 5px 5px 5px;
    background-color: white;
}
.transit-off{
    display: none;
}
.buss{
    border: 1px solid black;
    border-radius: 3px;
    margin: 5px;
    padding: 5px;
    /* width: 33%; */
    text-align: left;
}
.bust{
    margin-top: 10px;
    margin-left: 5px;
    border: 1px solid gray;
    border-radius: 3px;
    padding: 7px 5px 7px 7px;
    max-width: 350px;  
}
.bus{
    margin: 5px 5px 0px 5px;
    border: 1px solid gray;
    border-radius: 3px;
    padding: 7px 5px 7px 10px;
    /* width: 90%; */
    display: flex;
    justify-content: space-between;
    max-width: 400px;
}
.bus div{
    /* margin: 3px; */
}
.bus-left{
    margin-top: 10px;
}
.bus-left div{
    margin-bottom: 5px;
}
.gps{
    color: green;
    text-decoration: none;
    border: 1px solid green;
    border-radius: 3px;
    padding: 1px;
}
.gps:active{
    color: purple;
}
.gps sup{
    font-size: 7px;
    color: black;
    position: relative;
    top: -2px;
    left: 1px;
}
div.countdown{
    margin-left: 5px;
    margin-right: 3px;
    border: 1px solid black;
    padding: 1px 3px 1px 3px;
    border-radius: 3px;
    text-align: center;
    max-height: 70px;
    width: 40px;
}
div.min{
    font-size: 13px;
    /* border: 1px solid red; */
    margin-top: 0px;
    margin-bottom: 0px;
}
div.min-math{
    margin-top: 0px;
    margin-bottom: 0px;
    /* border: 1px solid green; */
    color: red;
    font-size: 23px;
}
.bold{
    font-weight: 900;
}
.gray{
    color: gray;
}
.transit-stop{
    width: 100%;
    margin: 10px 5px 0 5px;
    /* display: flex; */
}
.agency-upper{
    display: flex;
}
.short-title{
    margin: 5px 5px 3px 15px;
    font-weight: 900;
}
.radios label{
    margin-right: 5px;
}
label input[type="radio"]{
    margin: 5px 5px 10px 10px;
}
.agency-code{
    font-weight: 900;
    padding: 5px;
    margin: 20px 5px 0px 50px;
    /* position: relative; */
    /* top: -20px; */
    /* left: 30px; */
    font-size: 42px;
    border: 1px solid black;
    border-radius: 3px;
}
.agencies-string{
    margin: 5px 0 5px 15px;
    font-weight: 900;
}
.politics{
    margin: 0px 0 3px 10px;
    font-size: 11px;
    font-weight: 100;
    /* font-style: oblique; */
}
.agency-select{
    width: 327px;
    margin: 3px 0px 2px 5px;
    height: 35px;
}
hr{
    width: 327;
    margin: 5px 5px 10px 5px;
}
.load-stops{
    height: 35px;
    /* margin-bottom: 5px; */
    /* width: 100px; */
    /* border: 1px solid red; */
    color: green;
    font-weight: 900;
}
.stop-loads{
    height: 35px;
    font-weight: 900;
    color: gray;
    /* background-color: darkgray; */
}
.stop-loading{
    height: 35px;
    font-weight: 900;
    color: gray;
    /* background-color: darkgray; */
}
.slow{
    font-size: 11px;
    margin: 0px 0 0 5px;
    display: flex;
    height: 50px;
}
.slow div{
    margin: 2px 5px 0px 10px;
}
.stops-number{
    font-weight: 900;
    color: green;
}
.stop-select{
    width: 327px;
    height: 35px;
    margin: -5px 0 5px 5px;
}
.stop-filter{
    height: 35px;
    margin: 5px 0px 5px 5px;
    width: 323px;
}
.stop-info{
    display: flex;
    /* padding-top: 5px; */
}
.stop-title{
    font-weight: 900;
    padding: 3px 5px 3px 5px;
    font-size: 30px;
    border: 1px solid black;
    border-radius: 3px;
    min-height: 57px;
    overflow: hidden;
}
.transit-stop div.stop-title{
    margin: 3px 5px 5px 5px; 
    width: 222px;
  
}
div.stop-title div{
    font-size: 11px;
    font-weight: 100;
    font-style: oblique;
    margin: 0px;
    margin-right: 15px;
    width: 100%;
    text-align: right;
}
div.stop-title:hover{
    cursor: pointer
}
div.stop-title:active{
    color: purple;
    border: 1px solid purple;
}
#stop-id{
    height: 25px;
    margin: 3px 0 1px 5px;
    width: 75px;
    padding-left: 5px;
}
.map-link{
    margin: 3px 0px 5px 5px;
    text-align: center;
    /* font-size: 12px; */
    padding: 3px;
    color: green;
    border: 1px solid green;
    border-radius: 3px;
}
div.map-link:active{
    color: purple;
    border: 1px solid purple;
}

.update{
    color: blue;
    text-decoration: underline;
}
.update:hover{
    cursor: pointer
}
.update:active{
    color: purple;
}
.vehicular .short-title{
    margin-left: 15px;
    margin-top: 10px;
}
#vehicle-agency{
    width: 70px;
    padding-left: 3px;
    height: 40px;

}
#vehicle-number{
    width: 110px;
    padding-left: 3px;
    height: 40px;

}
.vehicular form input{
    margin: 5px 5px 0px 15px;
    margin: 10px;
    font-size: 18px;

    /* width: 100px; */
    /* padding: 0px; */
}
.vehicular input[type="submit"]{
    margin-top: 0px;
    font-weight: 900;
    color: green;
    height: 50px;

}
.vehicular-feedback{
    font-size: 11px;
    /* margin: -20px 0 10px 25px; */
    position: relative;
    top: -15px;
    left: 100px;
}
.vehicular{
    padding: 0;
}
.vehicle-info{
    margin: 0 5px 5px 15px;
}
.future-stops{
    margin-left: 5px;
}
.vehicular{
    background-color: white;
    padding-right: 10px;
}
.vehicular .g-frame{
    text-align: center;
    margin-left: 5px;
    /* margin-right: 15px; */
    width: 100%;
    /* border: 1px solid red; */
}
.vehicular iframe{
    /* margin: 5px 15px 0px 15px; */
    /* width: 100%; */
}
.stop{
    margin: 10px 7px 0px 12px;
    border: 1px solid gray;
    border-radius: 3px;
    padding: 7px 5px 7px 7px;
    max-width: 350px;
}
.stop-top{
    display: flex;
    justify-content: space-between;
}
.stop .map-link{
    /* margin: 0px 20px 0px 0px; */
    padding: 2px;
    max-width: 50%;

}
.any-stop-wild-card{
    text-align: center;
}
.any-stop-wild-card .stop-title{
    margin: 1px 5% 5px 5%; 
    /* width: 100%; */
}
.any-stop-wild-card .buss{
    margin-top: 10px;
}
.any-stop-wild-card iframe{
    margin: 5px 5px 0px 5px;
    width: 330px;
}

#PR-N{
    border-left: 5px solid PURPLE;
    border-right: 5px solid PURPLE;
}
#PR-S{
    border-left: 5px solid PURPLE;
    border-right: 5px solid PURPLE;
}
#RD-N{
    border-left: 5px solid #D4202F;
    border-right: 5px solid #D4202F;
}
#RD-S{
    border-left: 5px solid #D4202F;
    border-right: 5px solid #D4202F;
}
#OR-N{
    border-left: 5px solid #FE8220;
    border-right: 5px solid #FE8220;
}
#OR-S{
    border-left: 5px solid #FE8220;
    border-right: 5px solid #FE8220;
}
#YL-N{
    border-left: 5px solid #FEFE00;
    border-right: 5px solid #FEFE00;
}
#YL-S{
    border-left: 5px solid #FEFE00;
    border-right: 5px solid #FEFE00;
}
#GN-N{
    border-left: 5px solid #41B14A;
    border-right: 5px solid #41B14A;
}
#GN-S{
    border-left: 5px solid #41B14A;
    border-right: 5px solid #41B14A;
}

#BL-N{
    border-left: 5px solid #07A5E1;
    border-right: 5px solid #07A5E1;
}
#BL-S{
    border-left: 5px solid #07A5E1;
    border-right: 5px solid #07A5E1;
}
#GY-N{
    border-left: 5px solid gray;
    border-right: 5px solid gray;
}

